# tock

./: .gitignore  Cargo.toml  Packet_recv.drawio  README.md  kernel.vir  rust-toolchain.toml  thread_network_interface.drawio
boards/components/src/: epaper_v2.rs  ieee802154.rs  lib.rs  process_console.rs
boards/nordic/nrf52840dk/src/: io.rs  lib.rs  main.rs
boards/seeed_studio_lora-E5-HF/: Cargo.toml  Makefile  chip_layout.ld
boards/seeed_studio_lora-E5-HF/src/: io.rs  main.rs
capsules/core/: Cargo.toml
capsules/core/src/: alarm.rs  process_console.rs
capsules/extra/src/: ePaper_V2.rs  epaper_v2.rs  lib.rs  nonvolatile_storage_driver.rs
chips/nrf52/: Cargo.toml
chips/nrf52/src/: chip.rs  lib.rs  uart.rs
chips/nrf52840/src/: ieee802154_radio.rs  interrupt_service.rs  lib.rs  power.rs
chips/nrf5x/: Cargo.toml
chips/nrf5x/src/: lib.rs  rtc.rs  timer.rs  timer_simple.rs
chips/stm32wle5jc/: Cargo.toml
chips/stm32wle5jc/src/: chip_specs.rs  interrupt_service.rs  lib.rs
chips/stm32wle5xx/: Cargo.toml
chips/stm32wle5xx/src/: chip.rs  gpio.rs  lib.rs  rcc.rs
chips/stm32wle5xx/src/chip_specific/: chip_specs.rs  mod.rs
chips/stm32wle5xx/src/clocks/: clocks.rs  mod.rs  msi.rs
doc/wg/network/: Untitled Diagram.drawio
kernel/: Cargo.toml
kernel/src/: debug.rs  lib.rs  power.rs
kernel/src/collections/: list.rs
kernel/src/hil/: time.rs  uart.rs
kernel/src/platform/: scheduler_timer.rs
kernel/src/utilities/: mod.rs
libraries/tock-register-interface/src/: fields.rs  interfaces.rs  lib.rs  power.rs  registers.rs
(+5 files in other folders)
