# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "nrf5x"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
kernel = { path = "../../kernel" }
enum_primitive = { path = "../../libraries/enum_primitive" }
builtin = { path = "../../../verus/source/builtin" }
builtin_macros = { path = "../../../verus/source/builtin_macros" }
vstd = { path = "../../../verus/source/vstd" }

[features]
default = []

nrf51 = []
nrf52 = []
