# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "stm32wle5xx"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
cortexm4f = { path = "../../arch/cortex-m4f" }
kernel = { path = "../../kernel" }
enum_primitive = { path = "../../libraries/enum_primitive" }
